// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Button Types Clear should display clear button 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 3,
      },
      undefined,
      false,
    ]
  }
>
  <Pressable
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    activeOpacity={0.3}
    android_ripple={
      Object {
        "borderless": false,
        "color": "rgba(32, 137, 220, 0.32)",
        "radius": -5,
      }
    }
    delayPressIn={0}
    disabled={false}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2089dc",
            "fontSize": 18,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        Clear
      </Text>
    </View>
  </Pressable>
</View>
`;

exports[`Button Component Button Types Clear should display clear button disabled 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 3,
      },
      undefined,
      false,
    ]
  }
>
  <Pressable
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": true,
      }
    }
    activeOpacity={0.3}
    android_ripple={
      Object {
        "borderless": false,
        "color": "rgba(153, 161, 168, 0.32)",
        "radius": -5,
      }
    }
    delayPressIn={0}
    disabled={true}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "hsl(208, 8%, 63%)",
            "fontSize": 18,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        Clear
      </Text>
    </View>
  </Pressable>
</View>
`;

exports[`Button Component Button Types Clear should display raised clear button 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 3,
      },
      undefined,
      false,
    ]
  }
>
  <Pressable
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    activeOpacity={0.3}
    android_ripple={
      Object {
        "borderless": false,
        "color": "rgba(32, 137, 220, 0.32)",
        "radius": -5,
      }
    }
    delayPressIn={0}
    disabled={false}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2089dc",
            "fontSize": 18,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        Clear
      </Text>
    </View>
  </Pressable>
</View>
`;

exports[`Button Component Button Types Outline should display outline button 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 3,
      },
      undefined,
      false,
    ]
  }
>
  <Pressable
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    activeOpacity={0.3}
    android_ripple={
      Object {
        "borderless": false,
        "color": "rgba(32, 137, 220, 0.32)",
        "radius": -5,
      }
    }
    delayPressIn={0}
    disabled={false}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2089dc",
            "fontSize": 18,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        Outline
      </Text>
    </View>
  </Pressable>
</View>
`;

exports[`Button Component Button Types Outline should display outline button disabled 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 3,
      },
      undefined,
      false,
    ]
  }
>
  <Pressable
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": true,
      }
    }
    activeOpacity={0.3}
    android_ripple={
      Object {
        "borderless": false,
        "color": "rgba(153, 161, 168, 0.32)",
        "radius": -5,
      }
    }
    delayPressIn={0}
    disabled={true}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "hsl(208, 8%, 63%)",
          "borderRadius": 3,
          "borderWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "hsl(208, 8%, 63%)",
            "fontSize": 18,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        Outline
      </Text>
    </View>
  </Pressable>
</View>
`;

exports[`Button Component Button Types Outline should display raised outline button 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 3,
      },
      undefined,
      Object {
        "backgroundColor": "#fff",
        "overflow": "visible",
        "shadowColor": "rgba(0,0,0, .4)",
        "shadowOffset": Object {
          "height": 1,
          "width": 1,
        },
        "shadowOpacity": 1,
        "shadowRadius": 1,
      },
    ]
  }
>
  <Pressable
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    activeOpacity={0.3}
    android_ripple={
      Object {
        "borderless": false,
        "color": "rgba(32, 137, 220, 0.32)",
        "radius": -5,
      }
    }
    delayPressIn={0}
    disabled={false}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2089dc",
            "fontSize": 18,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        Outline
      </Text>
    </View>
  </Pressable>
</View>
`;

exports[`Button Component Button Types Solid should display raised solid button 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 3,
      },
      undefined,
      Object {
        "backgroundColor": "#fff",
        "overflow": "visible",
        "shadowColor": "rgba(0,0,0, .4)",
        "shadowOffset": Object {
          "height": 1,
          "width": 1,
        },
        "shadowOpacity": 1,
        "shadowRadius": 1,
      },
    ]
  }
>
  <Pressable
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    activeOpacity={0.3}
    android_ripple={
      Object {
        "borderless": false,
        "color": "rgba(255, 255, 255, 0.32)",
        "radius": -5,
      }
    }
    delayPressIn={0}
    disabled={false}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 18,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        Solid
      </Text>
    </View>
  </Pressable>
</View>
`;

exports[`Button Component Button Types Solid should display solid button 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 3,
      },
      undefined,
      false,
    ]
  }
>
  <Pressable
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    activeOpacity={0.3}
    android_ripple={
      Object {
        "borderless": false,
        "color": "rgba(255, 255, 255, 0.32)",
        "radius": -5,
      }
    }
    delayPressIn={0}
    disabled={false}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 18,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        Solid
      </Text>
    </View>
  </Pressable>
</View>
`;

exports[`Button Component Button Types Solid should display solid button disabled 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 3,
      },
      undefined,
      false,
    ]
  }
>
  <Pressable
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": true,
      }
    }
    activeOpacity={0.3}
    android_ripple={
      Object {
        "borderless": false,
        "color": "rgba(153, 161, 168, 0.32)",
        "radius": -5,
      }
    }
    delayPressIn={0}
    disabled={true}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "hsl(208, 8%, 90%)",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "hsl(208, 8%, 63%)",
            "fontSize": 18,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        Solid
      </Text>
    </View>
  </Pressable>
</View>
`;
